hphp/test/slow/parser/hh-reserved-name-bool-1.php.expectf
Fatal error: Cannot use 'Bool' as class name as it is reserved in %s on line 3
